Changes from version 18 to 19 (25-OCT-1999)
=============================

 - pstree: "static int" was only "static" (fix by Jeremy Buhler)
 - now uses cc -E instead of /lib/cpp (suggested by Kristofer Karas)
 - fuser: -s conflicted with -k (reported by David Hinds)
 - fuser: using -a with -s now yields an error
 - added a sanity check for signames.h (suggested by John Summerfield)
 - only "signals" < 100 are now added to signames.h, eliminating SIGSTKSZ


Changes from version 17 to 18 (1-NOV-1998)
=============================

 - fuser: usage summary listed -s (silent) as -q
 - fuser: fuser x/y yielded confusing error message if x/y doesn't exist
   (reported by Tigran Aivazian)
 - fuser: new option -i for interactive killing (like killall -i)
 - killall: tried to print a NULL pointer if full process name was unavailable
   and killing failed
 - killall: new option -g to kill process group instead of process
 - killall: cosmetic PROC_BASE changes (by Florian La Roche)
 - pidof: new option -g to show PGID instead of PID (by Florian La Roche)
 - pstree: new option -H to highlight process specified by PID
 - added -D_GNU_SOURCE to CFLAGS for glibc 2 compatibility
 - Makefile should now also work with bash-2


Changes from version 16 to 17 (17-FEB-1998)
=============================

 - fuser: now also handles /proc of recent 2.1 kernels (fix by Andreas Schwab;
   other fixed also proposed by Chris Wedgwood and Luca Berra)
 - pstree now properly handles init with PID = PPID = 1
 - fuser: no longer changes the name space for relative paths ending with the
   name of a name space (e.g. something/tcp)
 - fuser: now also reports mount points, swap files, and loop mounts
 - updated the fuser man page
 - killall: new option -w to wait for the killed processes to die
 - killall: didn't handle malloc failure


Changes from version 15 to 16 (28-JUL-1997)
=============================

 - killall: now gets the list of all PIDs before killing processes, thereby