@@ -1,0 +1,5 @@
+/*
+ * signames.c: Dummy file to better generate signames.h
+ */
+
+#include <signal.h>
