@@ -1,3 +1,10 @@
+Changes from 19 to 20 (14-DEC-2000)
+===================================
+ - New maintainer
+ - Uses automake/autoconf to determine things
+ - License changed to GPL
+ - signames.h generated better (suggested by Grant Erickson)
+
 Changes from version 18 to 19 (25-OCT-1999)
 =============================
 
